@startuml airport_aggregate
left to right direction
skinparam packageStyle rectangle
skinparam nodesep 40
skinparam ranksep 60
hide empty members

package "AirControlArea_Aggregate" <<aggregate>> {
  class AirControlArea <<entity>> <<root>> {
    maxAltitudeMetres : int
  }
  class AreaCode <<value object>> {
    code : String
  }
  note right of AreaCode : unique in system (US050)
  class AreaName <<value object>> {
    name : String
  }
  note right of AreaName : unique (client clarification)
  class BoundingBox <<value object>> {
    minLat : double
    maxLat : double
    minLon : double
    maxLon : double
  }
  note right of BoundingBox : Rectangle boundary.\nClient: "for sake of simplicity,\na rectangle".\nInvariant: minLat < maxLat, minLon < maxLon

  AirControlArea *---- AreaCode : identifiedBy
  AirControlArea *---- AreaName : namedAs
  AirControlArea *---- BoundingBox : boundedBy
}

package "Airport_Aggregate" <<aggregate>> {
  class Airport <<entity>> <<root>> {
    name : String
    city : String
    country : String
  }
  class AirportIATA <<value object>> {
    iataCode : String
  }
  note right of AirportIATA : 3 uppercase letters (A-Z)\nnormalises lowercase input
  class AirportICAO <<value object>> {
    icaoCode : String
  }
  note right of AirportICAO : 4 uppercase letters
  class Coordinates <<value object>> {
    latitude : double
    longitude : double
  }
  note right of Coordinates : Shared VO — used by Airport\nand Simulation.\nlat ∈ [-90,90], lon ∈ [-180,180]
  class Elevation <<value object>> {
    value : double
    unit : String
  }
  note right of Elevation : metres above sea level.\nvalue > 0 (US052.6)
  Airport *-- AirportIATA : identifiedBy
  Airport *-- AirportICAO : identifiedBy
  Airport *-- Coordinates : locatedAt
  Airport *-- Elevation : situatedAt
}


package "FlightRoute_Aggregate" <<aggregate>> {
  class FlightRoute <<entity>> <<root>> {
    deactivationDate
  }
  class RouteName <<value object>> {
    name
  }
  note right of RouteName : 2 letters + up to 4 digits\n(e.g. TP123). unique (US073)
  FlightRoute *--- RouteName : identifiedBy
}


Airport "*" --> "1" AirControlArea : locatedIn >

FlightRoute "*" ---> "1" Airport : hasOrigin >
FlightRoute "*" ----> "1" Airport : hasDestination >


@enduml
